--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ main {
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 100px;
+    margin-bottom: 100px;
     display: flex;
 }
 
@@ -216,9 +217,10 @@ main {
 
 /* blogs section end  */
 
+
 .footer-section {
     width: 100%;
-    height: 444px;
+    /* height: 444px; */
     text-align: center;
     padding: 3px;
     background-color: black;
@@ -226,15 +228,15 @@ main {
 }
 
 .footer-goal {
-    margin-top: 130px;
+    margin-top: 100px;
 }
 
 hr {
-    margin: 50px 140px;
+    margin: 50px 20%;
 }
 
 nav a {
-    width: 100px;
+    width: 100%;
     height: 32px;
     color: white;
     text-align: center;
@@ -246,7 +248,7 @@ nav a {
 
 .social-icon i {
     font-size: 30px;
-    margin: 10px 10px;
+    margin: 50px 0;
     padding: 5px;
     color: white;
 }
@@ -284,12 +286,13 @@ nav a {
         margin-left: 5%;
         margin-right: 5%;
         margin-top: 20px;
-        display: grid;
-        grid-template-columns: 1, 1fr;
+        display: flex;
+        flex-direction: column;
     }
 
     .blogs-button {
         width: 80%;
+        height: 250px;
         margin-left: 10%;
         margin-right: 10%;
         text-align: center;
@@ -300,40 +303,120 @@ nav a {
         border: 1px solid gray;
     }
 
+
     .blogs {
         margin-left: 5%;
         margin-right: 5%;
         display: grid;
-        grid-template-columns: 1, 1fr;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
     }
 
-    /* .blog {
-        width: 80%;
+    .blog {
+        width: 100%;
         margin-left: 10%;
         margin-right: 10%;
-    } */
+    }
 
+    .watch-all {
+        display: none;
+    }
+
+    .footer-section .manues nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-section hr {
+        margin: 0 20%;
+    }
+
+    .footer-section .manues nav a {
+        width: 100%;
+    }
 
 }
 
 /* Tablate Devices */
 @media only screen and (min-width:688px) and (max-width:992px) {
     .container {
-        width: 100%;
+        width: 80%;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 20px;
+        padding: 50px;
     }
 
-    .players,
-    .blogs {
-        grid-template-columns: repeat(2, 1fr);
-    }
 
-    .courses {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
-    .player,
-    .blog {
+    .blog-container {
+        margin-top: 20px;
+        display: flex;
         flex-direction: column;
     }
 
+    .blogs-button {
+        width: 100%;
+        height: 50px;
+        text-align: center;
+        background-color: white;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .blogs-button a {
+        border: 1px solid gray;
+    }
+
+
+    .blogs {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+        align-items: center;
+    }
+
+    .blog {
+        width: 350px;
+    }
+
+    .blogs .blog-banner img {
+        width: 350px;
+    }
+
+    .watch-all {
+        margin-bottom: 100px;
+    }
+
+    .watch-all a {
+        color: white;
+        width: 131px;
+        height: 47px;
+        text-decoration: none;
+        background-color: #DD0000;
+        padding: 10px 30px;
+    }
+
+    .footer-section .manues nav {
+        margin: 10px 100px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-section hr {
+        margin: 0 10%;
+    }
+
+    .footer-section .manues nav a {
+        width: 100%;
+    }
+
+}
+
+/* Computer Devices */
+@media only screen and (min-width:992px) {
+    .watch-all {
+        display: none;
+    }
 }
