--- a/styles/style.css
+++ b/styles/style.css
@@ -218,6 +218,7 @@ main {
 /* blogs section end  */
 
 
+/* footer section style start */
 .footer-section {
     width: 100%;
     /* height: 444px; */
@@ -253,11 +254,12 @@ nav a {
     color: white;
 }
 
+/* footer section style end */
 
 
 /* Media Queries */
 
-/* Mobile Devices */
+/* Mobile Devices start*/
 @media only screen and (max-width:688px) {
     .container {
         margin-left: 5%;
@@ -314,8 +316,8 @@ nav a {
 
     .blog {
         width: 100%;
-        margin-left: 10%;
-        margin-right: 10%;
+        /* margin-left: 10%;
+        margin-right: 10%; */
     }
 
     .watch-all {
@@ -339,16 +341,17 @@ nav a {
 
 }
 
-/* Tablate Devices */
+/* Mobile Devices end*/
+
+/* Tablate Devices start*/
 @media only screen and (min-width:688px) and (max-width:992px) {
     .container {
         width: 80%;
         margin-left: 5%;
         margin-right: 5%;
         margin-top: 20px;
-        padding: 50px;
+        padding: 20px;
     }
-
 
     .blog-container {
         margin-top: 20px;
@@ -413,6 +416,8 @@ nav a {
     }
 
 }
+
+/* Tablate Devices end*/
 
 /* Computer Devices */
 @media only screen and (min-width:992px) {
