--- a/styles/style.css
+++ b/styles/style.css
@@ -324,6 +324,7 @@ nav a {
         display: none;
     }
 
+    /* footer section style start */
     .footer-section .manues nav {
         display: flex;
         flex-direction: column;
@@ -339,6 +340,8 @@ nav a {
         width: 100%;
     }
 
+    /* footer section style start */
+
 }
 
 /* Mobile Devices end*/
@@ -350,7 +353,16 @@ nav a {
         margin-left: 5%;
         margin-right: 5%;
         margin-top: 20px;
-        padding: 20px;
+    }
+
+    .header-title {
+        padding: 30px;
+    }
+
+    .header-image img {
+        width: 323px;
+        height: 500px;
+        margin-right: 100px;
     }
 
     .blog-container {
