--- a/styles/upcominh-match.css
+++ b/styles/upcominh-match.css
@@ -202,9 +202,7 @@ main {
     margin-top: 30px;
 }
 
-
 /* blogs section end  */
-
 
 /* footer section style start */
 .footer-section {
@@ -308,6 +306,11 @@ nav a {
         margin-right: 10%; */
     }
 
+    .watch-all {
+        display: none;
+    }
+
+    /* footer section style start */
     .footer-section .manues nav {
         display: flex;
         flex-direction: column;
@@ -323,6 +326,8 @@ nav a {
         width: 100%;
     }
 
+    /* footer section style end */
+
 }
 
 /* Mobile Devices end*/
@@ -334,7 +339,16 @@ nav a {
         margin-left: 5%;
         margin-right: 5%;
         margin-top: 20px;
-        padding: 20px;
+    }
+
+    .header-title {
+        padding: 30px;
+    }
+
+    .header-image img {
+        width: 323px;
+        height: 500px;
+        margin-right: 100px;
     }
 
     .blog-container {
@@ -372,6 +386,20 @@ nav a {
         width: 350px;
     }
 
+    .watch-all {
+        margin-bottom: 100px;
+    }
+
+    .watch-all a {
+        color: white;
+        width: 131px;
+        height: 47px;
+        text-decoration: none;
+        background-color: #DD0000;
+        padding: 10px 30px;
+    }
+
+    /* fotter section style start  */
     .footer-section .manues nav {
         margin: 10px 100px;
         justify-content: center;
